[BUGFIX] fix accordion icon spacing

--- a/Resources/Private/Sass/demo/_components.filter.scss
+++ b/Resources/Private/Sass/demo/_components.filter.scss
@@ -93,7 +93,7 @@ fieldset {
     position: relative;
     display: block;
     width: 100%;
-
+    
     &:hover{
       &:before {
         background: $primaryColor;
@@ -120,6 +120,7 @@ fieldset {
       display: inline-block;
       position: absolute;
       right: 0;
+      top: 0;
       font-size: 1.5em;
       font-weight: normal;
       line-height: 1;
