--- a/Resources/Private/Sass/demo/_components.list.scss
+++ b/Resources/Private/Sass/demo/_components.list.scss
@@ -19,6 +19,7 @@
 
     &:hover{
       background: darken($primaryColor, 20%);
+      text-decoration: none;
     }
   }
 
